--- a/example/input/objects.yml
+++ b/example/input/objects.yml
@@ -5,7 +5,7 @@ models:
     type: NO_MODEL
     width: 0.14
     length: 0.14
-    heading: 3.14
+    heading: 1.57
   - name: waypoint
     type: NO_MODEL
     width: 0.14
@@ -17,6 +17,7 @@ models:
   - name: construction_cone
     type: GAZEBO_MODEL
     z: -1
+    dynamic_size: False
   - name: fire_hydrant
     type: GAZEBO_MODEL
     z: -1
