Handle models from ignition gazebo server

--- a/example/input/fetch/objects.yml
+++ b/example/input/fetch/objects.yml
@@ -17,7 +17,7 @@ models:
     type: GAZEBO_MODEL
     dynamic_size: False
   - name: LampAndStand
-    type: CUSTOM_MODEL
+    type: GAZEBO_MODEL
     dynamic_size: False
   - name: demo_cube
     type: CUSTOM_MODEL
