--- a/example/input/turtlebot3/objects.yml
+++ b/example/input/turtlebot3/objects.yml
@@ -6,10 +6,12 @@ models:
     width: 0.14
     length: 0.14
     heading: 1.57
+    color: blue
   - name: waypoint
     type: MISSION_ONLY
     width: 0.14
     length: 0.14
+    color: green
   - name: wooden_table
     type: CUSTOM_MODEL
     #url: ////
